# E-Commerce-API

./: .gitignore  .pre-commit-config.yaml  README.md  data.ecommerce.json  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  readme.md  requirements.txt
authentication/: constants.py  helper.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0001_squashed_0003_alter_customuser_options.py  0002_remove_customuser_is_staff_customuser_role.py  0003_alter_customuser_options.py
authentication/tests/: test_login_view.py  test_logout_view.py  test_refresh_token_view.py  test_register_view.py  test_staff_register_view.py  test_user_register_view.py
carts/: models.py  serializers.py  urls.py  views.py
carts/migrations/: 0001_initial.py
carts/tests/: test_get_cart.py
core/: settings.py  urls.py
core/services/: BaseService.py
ecommerce_project/: celery.py  settings.py  urls.py
orders/: apps.py  models.py  receivers.py  serializers.py  signals.py  tasks.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_orderitem_unique_together.py  0003_alter_order_options.py
orders/tests/: test_change_order_status.py  test_create_order.py
products/: documents.py  factories.py  helpers.py  models.py  router.py  serializers.py  tasks.py  urls.py  views.py
products/migrations/: 0001_initial.py  0001_squashed_0006_alter_product_options.py  0002_alter_category_slug_product.py  0003_review.py  0004_product_image.py  0005_category_description.py  0006_alter_product_options.py  0007_alter_product_slug.py  0008_alter_category_slug.py  0009_product_products_pr_slug_3edc0c_idx_and_more.py
products/models/: __init__.py  category.py  product.py  review.py
products/serializers/: __init__.py  category_serializers.py  product_es_serializers.py  product_serializers.py  review_serializers.py
search/: router.py  urls.py  views.py
tests/: conftest.py
users/: apps.py  documents.py  models.py  receivers.py  serializers.py  signals.py  urls.py  views.py
(+60 files in other folders)
